Revert "Fix promoted piece overflow at smaller board sizes"
This reverts commit 79f419518e96c9e4679ed4ba8c807f396fd2742f.

--- a/styles.css
+++ b/styles.css
@@ -486,7 +486,6 @@ user-select: none;
   line-height: 1;
 }
 .shogi-kif .piece-promoted {
-  font-size: calc(var(--shogi-cell-size) * 0.48);
   color: var(--shogi-promoted-color);
 }
 .shogi-kif .cell .piece-opponent {
